Integrate with Algolia and wire up facet filters

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <base href="/" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- TODO: remove Algolia stylesheet below once custom styles for search results are in place -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@7.3.1/themes/algolia-min.css" integrity="sha256-HB49n/BZjuqiCtQQf49OdZn63XuKFaxcIHWf0HNKte8=" crossorigin="anonymous">
   </head>
   <body>
     <div id="root"></div>
