--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-  <body>
+  <body class="dark-mode">
     <div id="root"></div>
   </body>
 </html>
