feat: accept cc payment for new subs plan

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
     <base href="/" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://js.recurly.com/v4/recurly.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://js.recurly.com/v4/recurly.js"></script>
   </body>
 </html>
