perf: refactor authenticated enterprise app routes to eliminate duplicate work
By moving the authenticated enterprise app routes further down the component tree (conversely, moving the `AuthenticatedUserSubsidyPage` component higher in the component tree), we are ensuring the common business logic between pages is not duplicated between page route changes, for example when the user goes from the Course Dashboard page to the Search page.

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,14 @@
     <% if (htmlWebpackPlugin.options.NODE_ENV !== 'production' && htmlWebpackPlugin.options.OPTIMIZELY_PROJECT_ID) { %>
       <script src="https://cdn.optimizely.com/js/<%= htmlWebpackPlugin.options.OPTIMIZELY_PROJECT_ID %>.js"></script>
     <% } %>
-
+    
+    <!-- Append the `?module` param to load the module version of `web-vitals` -->
+    <script type="module">
+      import {getCLS, getFID, getLCP} from 'https://unpkg.com/web-vitals?module';
+      getCLS(console.log);
+      getFID(console.log);
+      getLCP(console.log);
+    </script>
   </head>
   <body>
     <div id="root"></div>
